lvl_junior/administrator-kubernetes-junior/07_Lifehacks/077-step2/02_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-http-server
  namespace: debug-2
spec:
  strategy: 
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: go-http-server
  template:
    metadata:
      labels:
        app: go-http-server
    spec:
      containers:
      - name: server
        image: bdv21/http-server:0.0.2
        ports:
        - containerPort: 8080
          name: web
        volumeMounts:
        - name: config-volume
          mountPath: /app/config.yaml
          subPath: config.yaml  # This line ensures that only config.yaml is mounted at the path
      volumes:
      - name: config-volume
        configMap:
          name: unexiting-cm
